<?xml version="1.0"?>
<package>
  <name>rospy_message_transporter</name>
  <version>0.0.1</version>
  <description> Simplifies global communication and exchange of ros messages. </description>
  <maintainer email="mfsriti@gmail.com">Mohamed-Foued Sriti</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/rospy_message_transporter</url> -->
  <author email="mfsriti@gmail.com">Mohamed-Foued Sriti</author>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>rospy_message_converter</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy_message_converter</run_depend>
</package>